fixed list item spacing

--- a/css/style.css
+++ b/css/style.css
@@ -74,9 +74,9 @@ ul {
 
 li {
     list-style-type: none;
-    /* margin: 1px; */
-    /* padding: 5px; */
-    /* font-size: 2vw; */
+    margin: 1px;
+    padding: 5px;
+    font-size: 2vw;
 }
 
 a {
